testdata/de/dm/intellij/bndtools/parser/BndHeaderParsersTest/testBundleActivatorHighlighting/bnd.bnd
Bundle-Activator: <error descr="Activator class does not inherit from BundleActivator">de.dm.Foo</error>
